# unsealed-networks

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PHASE2_PARSING.md  README.md  TONIGHT.md  emails_peter_thiel.json  pyproject.toml
.claude/skills/test_before_commit/: SKILL.md
.github/workflows/: ci.yml
docs/: DOCKER_PUBLISH.md  implementation-checklist.md
docs/technical/: ARCHITECTURE.md  DEVELOPMENT.md  ETL_PIPELINE.md  INSTALLATION.md  MCP_SETUP.md  PHASE1_SURVEY.md  PIPELINE_SPECIFICATION.md
pipeline/: N8N_WORKFLOW.md  README.md
pipeline/inbox/: HOUSE_OVERSIGHT_010566.txt  HOUSE_OVERSIGHT_030716.txt
pipeline/manifests/: HOUSE_OVERSIGHT_010566.json  HOUSE_OVERSIGHT_030716.json
pipeline/steps/: step_02_extract_email_metadata.py  step_04_extract_entities.py  step_99_assemble_metadata.py
scripts/: docker-entrypoint.sh  mcp-server-wrapper.sh
src/unsealed_networks/: __init__.py  cli.py  config.py  mcp_main.py  mcp_sse_main.py
src/unsealed_networks/database/: __init__.py  auto_merge.py  canonical.py  entity_loader.py  llm_review.py  loader.py  merge_finder.py  queries.py  schema.py
src/unsealed_networks/entities/: __init__.py  extractor.py
src/unsealed_networks/etl/: __init__.py  classify.py
src/unsealed_networks/mcp/: __init__.py  server.py  sse_server.py
src/unsealed_networks/parsers/: __init__.py  classifier.py  email_parser.py  legal_parser.py  news_parser.py
src/unsealed_networks/pipeline/: __init__.py  manifest.py  step.py
tests/: test_basic.py  test_mcp_tools.py  test_scanner.py
(+11 files in other folders)
