[project]
name = "unsealed-networks"
version = "0.1.0"
description = "Extract and analyze relationship networks from public Epstein documents"
readme = "README.md"
authors = [
    { name = "Devon Jones", email = "devon.jones@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.0",
    "pandas>=2.0",
    "sh>=2.2.2",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[project.scripts]
unsealed-networks = "unsealed_networks.cli:main"
unsealed-networks-mcp = "unsealed_networks.mcp_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__
"tests/*" = ["B", "S"]    # More permissive in tests
"cli.py" = ["B008"]       # typer.Argument/Option in defaults is the pattern

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=unsealed_networks",
    "--cov-report=term-missing",
    "--cov-report=html",
]
